--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Simon Says</h1>
+        <button id="play">Gioca</button>
+        <h2 id="message">Leggi e ricorda i numeri da 1 a 99 che appariranno quando premi "Gioca"</h2>
+    </div>
     <script src="./script/script.js"></script>
 </body>
 </html>
