--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h1>Simon Says</h1>
         <button id="play">Gioca</button>
         <h2 id="message">Leggi e ricorda i numeri da 1 a 99 che appariranno quando premi "Gioca"</h2>
+        <h3>Timer</h3>
+        <h4 id="timer">Avvrai 30 secondi per ricordarli</h4>
     </div>
     <script src="./script/script.js"></script>
 </body>
